--- a/.gitignore
+++ b/.gitignore
@@ -4,14 +4,16 @@
 /node_modules
 /.pnp
 .pnp.js
-.next
-out
+
+# Next.js
+/.next
+/out
+
 # testing
 /coverage
 
 # production
 /build
-/.next
 
 # misc
 .DS_Store
@@ -23,9 +25,6 @@ out
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-node_modules
-.env
 
 # Hardhat files
 /cache
