--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ethersproject/providers": "^5.7.2",
     "@openzeppelin/contracts": "^5.0.2",
     "@rainbow-me/rainbowkit": "^2.1.1",
     "@tanstack/react-query": "^5.39.0",
     "@tanstack/react-query-devtools": "^5.39.0",
+    "@uniswap/sdk-core": "^5.3.0",
+    "@uniswap/v3-sdk": "^3.13.0",
     "eslint-config-next": "^14.2.3",
     "ethers": "^6.13.0",
     "hardhat": "^2.22.5",
@@ -23,7 +26,8 @@
     "react": "^18.3.1",
     "react-icons": "^5.2.1",
     "sharp": "^0.33.4",
-    "wagmi": "^2.9.7"
+    "wagmi": "^2.9.7",
+    "web3": "^4.9.0"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.32.1",
